--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,29 @@
 language: node_js
 node_js:
-  - '7.7.4'
+- 7.7.4
+
 before_script:
-  - npm install -g gulp
+- yarn global add gulp
 script: gulp
 
 deploy:
-  provider: pages
+- provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  on:
-    branch: dev
+  github_token: "$GITHUB_TOKEN"
   target_branch: master
   local_dir: dist
   email: badersur@gmail.com
   name: Bader Nasser
+  on:
+    branch: dev
+
+- provider: gae
+  skip_cleanup: true
+  keyfile: client-secret.json
+  project: badersur-push
+  default: true
+  on: dev
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
+  -in client-secret.json.enc -out client-secret.json -d
