--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
-node_js:
-- 7.7.4
+node_js: '7'
+cache:
+  yarn: true
+  directories:
+    - node_modules # NPM packages
 
 before_script:
 - yarn global add gulp
