--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "2.5.2",
+  "version": "2.6.0",
   "description": "Source code for my github pages",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
@@ -18,19 +18,19 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^1.1.1",
     "gulp-file-include": "^1.0.0",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-newer": "^1.2.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
+    "material-design-lite": "^1.3.0",
     "run-sequence": "^1.0.1",
+    "sass-module-importer": "^1.4.0",
     "sw-precache": "^3.2.0",
     "sw-toolbox": "^3.2.1"
   },
