--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "2.7.3",
+  "version": "2.8.0",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
@@ -24,6 +24,9 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-delete-original": "^0.2.3",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
