tweak manifests, head and main script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 {
   "files.exclude": {
     "**/.publish": true,
-    "**/.tmp": true
+    "**/.tmp": true,
+    "**/.gitattributes": true,
+    "**/docs": true,
+    "**/yarn.lock": true
   }
 }
