--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "badersur.github.io",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
     "babel-core": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
