--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,9 @@ deploy:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
+notifications:
+  email:
+    recipients:
+      - badersur@gmail.com
+    on_success: never # default: change
+    on_failure: always # default: always
