--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "2.8.4",
+  "version": "2.9.0",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
@@ -36,6 +36,7 @@
     "material-design-lite": "^1.3.0",
     "run-sequence": "^1.2.2",
     "sass-module-importer": "^1.4.0",
+    "sw-offline-google-analytics": "^0.0.19",
     "sw-precache": "^3.2.0",
     "sw-toolbox": "^3.6.0"
   },
