--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "2.10.1",
+  "version": "2.11.0",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
@@ -18,13 +18,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^1.1.1",
-    "gulp-file-include": "^1.1.0",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
+    "gulp-nunjucks-render": "^2.2.1",
     "gulp-rev": "^7.1.2",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-replace": "^0.4.3",
