--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "devDependencies": {
@@ -32,6 +32,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.2",
+    "markdown-it": "^8.3.1",
     "material-design-lite": "^1.3.0",
     "run-sequence": "^1.2.2",
     "sass-module-importer": "^1.4.0",
