--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ language: node_js
 node_js: 7
 cache:
   yarn: true
-  directories: node_modules
+  directories:
+  - node_modules
 before_script: yarn global add gulp-cli
 script: yarn run build
 deploy:
