--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Source code for my github pages and GAE application",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
@@ -29,6 +29,7 @@
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-rev": "^7.1.2",
     "gulp-rev-delete-original": "^0.2.3",
+    "gulp-rev-format": "^1.0.4",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
