--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,14 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+instance_class: F2
+automatic_scaling:
+  max_concurrent_requests: 8 # (Default: 8, Maximum: 80)
+  max_idle_instances: automatic  # default value
+  max_pending_latency: automatic
+  min_idle_instances: 1
+  min_pending_latency: 30ms  # default value
+
 libraries:
 - name: webapp2
   version: "2.5.2"
