--- a/app.yaml
+++ b/app.yaml
@@ -13,7 +13,7 @@ automatic_scaling:
   max_concurrent_requests: 8 # (Default: 8, Maximum: 80)
   max_idle_instances: automatic  # default value
   max_pending_latency: automatic
-  min_idle_instances: 1
+  # min_idle_instances: 1
   min_pending_latency: 30ms  # default value
 
 libraries:
@@ -115,7 +115,14 @@ skip_files:
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\..*$
 - ^(.*/)?.*\.bak$
-- ^node_modules/.*
-- ^pages/.*
-- ^\.tmp/.*
-- ^\.vscode/.*
+
+- ^client-secret\.json\.enc$
+- ^gulpfile\.babel\.js$
+- ^package\.json$
+- ^README\.md$
+
+- ^node_modules
+- ^pages
+- ^docs
+- ^\.tmp
+- ^\.vscode
