--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,20 @@ dist: trusty
 sudo: false
 language: node_js
 node_js: "7.10.0"
+
 cache:
   directories:
+  - $HOME/.npm
   - node_modules
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
+  -in client-secret.json.enc -out client-secret.json -d
+- npm install npm@latest -g
+
 before_script: npm install --global gulp-cli
 script: npm run build
+
 deploy:
 - provider: pages
   skip_cleanup: true
@@ -16,17 +25,10 @@ deploy:
   email: badersur@gmail.com
   name: "Bader Nasser"
   on: dev
+
 - provider: gae
   skip_cleanup: true
   keyfile: client-secret.json
   project: badersur-push
   default: true
   on: dev
-before_install:
-- openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
-  -in client-secret.json.enc -out client-secret.json -d
-notifications:
-  email:
-    recipients: badersur@gmail.com
-    on_success: never # default: change
-    on_failure: always # default: always
