--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- npm install npm@latest -g
+- npm i npm@latest -g
+- npm i gulp-cli -g
+- echo 'npm -v' && npm -v
 
-before_script: npm install --global gulp-cli
 script: npm run build
 
 deploy:
