--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- npm i npm@latest -g
-- npm i gulp-cli -g
+- npm i -g npm@latest
+- npm i -g gulp-cli
 - echo 'npm -v' && npm -v
 
 script: npm run build
