--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 dist: trusty
 sudo: false
 language: node_js
-node_js: "7.10.0"
-
+node_js: 7.10.0
 cache:
   directories:
-  - $HOME/.npm
+  - "$HOME/.npm"
   - node_modules
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- npm i -g npm@latest
-- npm i -g gulp-cli
+- npm i -g npm@5.0.3
+- npm i -g gulp-cli@1.3.0
 
 script: npm run build
 
@@ -23,12 +22,13 @@ deploy:
   target_branch: master
   local_dir: pages
   email: badersur@gmail.com
-  name: "Bader Nasser"
+  name: Bader Nasser
   on: dev
 
 - provider: gae
   skip_cleanup: true
   keyfile: client-secret.json
-  project: badersur-push
+  project: bader-sur
   default: true
+  verbosity: info
   on: dev
