--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
@@ -52,6 +52,8 @@
   "scripts": {
     "serve": "ENV_DEST=gae gulp && dev_appserver.py . --port 5555",
     "deploy": "ENV_DEST=gae gulp && gcloud app deploy --project bader-sur --verbosity=info",
-    "build": "gulp && ENV_DEST=gae gulp"
+    "build": "gulp && ENV_DEST=gae gulp",
+    "index": "gcloud datastore create-indexes index.yaml --project bader-sur",
+    "cleanup": "gcloud datastore cleanup-indexes index.yaml --project bader-sur"
   }
 }
