--- a/app.yaml
+++ b/app.yaml
@@ -13,7 +13,7 @@ automatic_scaling:
   max_concurrent_requests: 16 # (Default: 8, Maximum: 80)
   max_idle_instances: automatic # default value
   max_pending_latency: automatic
-  min_idle_instances: 1
+  # min_idle_instances: 1
   min_pending_latency: 30ms # default value
 
 libraries:
