--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 language: node_js
 node_js: 7.10.0
 cache:
+  yarn: true
   directories:
   - "$HOME/.npm"
   - node_modules
@@ -10,10 +11,9 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- npm i -g npm@5.0.3
-- npm i -g gulp-cli@1.3.0
+- yarn global add gulp-cli@1.3.0
 
-script: npm run build
+script: yarn run build
 
 deploy:
 - provider: pages
