--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.5.7",
+  "version": "3.5.8",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
@@ -8,22 +8,22 @@
     "url": "https://github.com/badersur/badersur.github.io"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.12",
     "critical": "^0.8.4",
-    "del": "^2.2.2",
-    "eslint-config-google": "^0.7.1",
+    "del": "^3.0.0",
+    "eslint-config-google": "^0.8.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
     "gulp-nunjucks-render": "^2.2.1",
@@ -41,19 +41,19 @@
     "markdown-it": "^8.3.1",
     "material-design-lite": "^1.3.0",
     "nunjucks": "^3.0.1",
-    "run-sequence": "^1.2.2",
+    "run-sequence": "^2.0.0",
     "sass-module-importer": "^1.4.0",
-    "sw-precache": "^5.1.1",
+    "sw-precache": "^5.2.0",
     "sw-toolbox": "^3.6.0"
   },
   "engines": {
     "node": ">=6"
   },
   "scripts": {
-    "serve": "ENV_DEST=gae gulp && dev_appserver.py . --port 5555",
-    "deploy": "ENV_DEST=gae gulp && gcloud app deploy --project bader-sur --verbosity=info",
+    "serve": "ENV_DEST=gae gulp && dev_appserver.py . --port=5555",
+    "deploy": "ENV_DEST=gae gulp && gcloud app deploy --project=bader-sur --verbosity=info",
     "build": "gulp && ENV_DEST=gae gulp",
-    "index": "gcloud datastore create-indexes index.yaml --project bader-sur",
-    "cleanup": "gcloud datastore cleanup-indexes index.yaml --project bader-sur"
+    "index": "gcloud datastore create-indexes index.yaml --project=bader-sur",
+    "cleanup": "gcloud datastore cleanup-indexes index.yaml --project=bader-sur"
   }
 }
