--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --nightly
+- export PATH="$HOME/.yarn/bin:$PATH"
 - yarn global add gulp-cli@1.3.0
 
 script: yarn run build
