--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.10.1",
+  "version": "3.10.2",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
@@ -11,23 +11,23 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.13",
-    "critical": "^0.9.1",
+    "critical": "^1.0.0",
     "del": "^3.0.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
-    "gulp-cache": "^0.4.6",
+    "gulp-cache": "^1.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
     "gulp-nunjucks-render": "^2.2.1",
-    "gulp-rev": "^8.0.0",
+    "gulp-rev": "^8.1.0",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-format": "^1.0.4",
     "gulp-rev-replace": "^0.4.3",
@@ -35,13 +35,13 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
+    "gulp-useref": "^3.1.3",
     "jquery": "^3.2.1",
-    "js-yaml": "^3.9.1",
+    "js-yaml": "^3.10.0",
     "markdown-it": "^8.4.0",
     "material-design-lite": "^1.3.0",
     "nunjucks": "^3.0.1",
-    "run-sequence": "^2.1.0",
+    "run-sequence": "^2.2.0",
     "sass-module-importer": "^1.4.0",
     "sw-precache": "^5.2.0",
     "sw-toolbox": "^3.6.0"
@@ -55,5 +55,8 @@
     "build": "gulp && ENV_DEST=gae gulp",
     "index": "gcloud datastore create-indexes index.yaml --project=bader-sur",
     "cleanup": "gcloud datastore cleanup-indexes index.yaml --project=bader-sur"
+  },
+  "dependencies": {
+    "ajv": "^5.3.0"
   }
 }
