--- a/app.yaml
+++ b/app.yaml
@@ -30,7 +30,8 @@ handlers:
   mime_type: application/x-web-app-manifest+json
   expiration: "1s"
   secure: always
-
+  http_headers:
+    X-Content-Type-Options: "nosniff"
 # Images (cached for a year since URLs contain hashes)
 
 - url: /(.+\.ico)
@@ -41,6 +42,7 @@ handlers:
   http_headers:
     Access-Control-Allow-Origin: "*"
     Content-Type: "image/x-icon"
+    X-Content-Type-Options: "nosniff"
 
 - url: /(.+\.(gif|jpe?g|png|svgz?|webp))
   upload: gae/(.+\.(gif|jpe?g|png|svgz?|webp))
@@ -51,6 +53,7 @@ handlers:
     # Allow cross-origin access to web fonts and images
     # You can also replace "*" with a specific host, e.g. https://example.org
     Access-Control-Allow-Origin: "*"
+    X-Content-Type-Options: "nosniff"
 
 # CSS, Javascript, text and other file types
 
@@ -61,6 +64,7 @@ handlers:
   secure: always
   http_headers:
     Content-Type: "text/javascript; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 - url: /(.+\.js)
   upload: gae/(.+\.js)
@@ -69,6 +73,7 @@ handlers:
   secure: always
   http_headers:
     Content-Type: "text/javascript; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 - url: /(.+\.css)
   upload: gae/(.+\.css)
@@ -77,11 +82,14 @@ handlers:
   secure: always
   http_headers:
     Content-Type: "text/css; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 - url: /sitemap
   upload: gae/sitemap\.xml
   static_files: gae/sitemap.xml
   secure: always
+  http_headers:
+    X-Content-Type-Options: "nosniff"
 
 - url: /manifest\.webmanifest
   upload: gae/manifest\.webmanifest
@@ -89,11 +97,14 @@ handlers:
   secure: always
   http_headers:
     Content-Type: "application/manifest+json; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 - url: /(.+\.(xml|txt|json|map))
   upload: gae/(.+\.(xml|txt|json|map))
   static_files: gae/\1
   secure: always
+  http_headers:
+    X-Content-Type-Options: "nosniff"
 
 # HTML pages
 
@@ -113,6 +124,7 @@ handlers:
     # you can use an online CSP header generator such as: http://cspisawesome.com/.
     # Content-Security-Policy: "script-src 'self'; object-src 'self'"
     Content-Type: "text/html; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 # Pretty links for courses & projects
 
@@ -125,6 +137,7 @@ handlers:
     X-UA-Compatible: "IE=edge"
     # Content-Security-Policy: "script-src 'self'; object-src 'self'"
     Content-Type: "text/html; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 # Homepages for /ar/ & /en/
 
@@ -137,6 +150,7 @@ handlers:
     X-UA-Compatible: "IE=edge"
     # Content-Security-Policy: "script-src 'self'; object-src 'self'"
     Content-Type: "text/html; charset=utf-8"
+    X-Content-Type-Options: "nosniff"
 
 # Redirecting & handling errors: 404 & 500
 
