--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.14.0",
+  "version": "3.15.0",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
@@ -14,7 +14,7 @@
     "critical": "^1.0.0",
     "del": "^3.0.0",
     "eslint-config-google": "^0.9.1",
-    "gulp": "^3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.0.1",
