--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- npm i -g npm@5.5.1
+- if ! $(npm -v | grep -q '5.5.1'); then npm i -g npm@5.5.1; fi
 - npm i -g gulp-cli@1.4.0
 
 script: npm run build
