--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "badersur.github.io",
-  "version": "3.15.0",
+  "version": "3.15.1",
+  "license": "MIT",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi (@BaderSur)",
   "repository": {
