--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 sudo: false
 language: node_js
-node_js: 9.1.0
+node_js: 9
 cache:
   directories:
   - "$HOME/.npm"
@@ -10,7 +10,7 @@ cache:
 before_install:
 - openssl aes-256-cbc -K $encrypted_1e2bbe134f98_key -iv $encrypted_1e2bbe134f98_iv
   -in client-secret.json.enc -out client-secret.json -d
-- if ! $(npm -v | grep -q '5.5.1'); then npm i -g npm@5.5.1; fi
+# - if ! $(npm -v | grep -q '^5'); then npm i -g npm@5; fi
 - npm i -g gulp-cli@1.4.0
 
 script: npm run build
