--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.22.1",
+  "version": "3.23.0",
   "license": "MIT",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi",
@@ -18,14 +18,14 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.21.0",
+    "browser-sync": "^2.23.1",
     "critical": "^1.1.0",
     "del": "^3.0.0",
     "eslint-config-google": "^0.9.1",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^4.0.0",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
-    "gulp-cache": "^1.0.1",
+    "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^4.0.0",
@@ -40,7 +40,7 @@
     "gulp-rev-format": "^1.0.4",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^3.1.0",
-    "gulp-size": "^2.1.0",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.2",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.3",
@@ -49,10 +49,8 @@
     "markdown-it": "^8.4.0",
     "material-design-lite": "^1.3.0",
     "nunjucks": "^3.0.1",
-    "run-sequence": "^2.2.0",
     "sass-module-importer": "^1.4.0",
-    "sw-precache": "^5.2.0",
-    "sw-toolbox": "^3.6.0"
+    "workbox-build": "^2.1.2"
   },
   "dependencies": {
     "ajv": "^5.5.2"
