--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badersur.github.io",
-  "version": "3.23.0",
+  "version": "3.24.0",
   "license": "MIT",
   "description": "A PWA that shows my skills, projects, blog posts and completed online courses",
   "author": "Bader Nasser Al-Hashmi",
@@ -9,50 +9,57 @@
     "url": "https://github.com/badersur/badersur.github.io"
   },
   "scripts": {
-    "serve": "ENV_DEST=gae gulp && dev_appserver.py . --port=5555 --application=bader-sur",
-    "deploy": "ENV_DEST=gae gulp && gcloud app deploy --project=bader-sur --verbosity=info",
-    "build": "gulp && ENV_DEST=gae gulp",
-    "index": "gcloud datastore create-indexes index.yaml --project=bader-sur",
-    "cleanup": "gcloud datastore cleanup-indexes index.yaml --project=bader-sur"
+    "serve": "npm run build_gae && dev_appserver.py . --port=5555 --application=bader-sur",
+    "deploy": "npm run build_gae && gcloud app deploy --project=bader-sur --verbosity=info",
+    "build": "npm run build_gae && npm run build_pages",
+    "build_gae": "cross-env NODE_ENV=production DEST=gae gulp",
+    "build_pages": "cross-env NODE_ENV=production gulp",
+    "index": "gcloud datastore indexes create index.yaml --project=bader-sur",
+    "cleanup": "gcloud datastore indexes cleanup index.yaml --project=bader-sur"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.23.1",
-    "critical": "^1.1.0",
+    "ajv": "^6.5.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.7",
+    "critical": "^1.3.4",
+    "cross-env": "^5.2.0",
     "del": "^3.0.0",
-    "eslint-config-google": "^0.9.1",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-babel": "^7.0.0",
+    "eslint-config-google": "^0.10.0",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^4.0.0",
-    "gulp-htmlmin": "^4.0.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^5.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-nunjucks-render": "^2.2.1",
+    "gulp-newer": "^1.4.0",
+    "gulp-nunjucks-render": "^2.2.2",
     "gulp-rev": "^8.1.1",
     "gulp-rev-delete-original": "^0.2.3",
     "gulp-rev-format": "^1.0.4",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-sass": "^3.1.0",
+    "gulp-rev-replace": "^0.4.4",
+    "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.3",
-    "jquery": "^3.2.1",
-    "js-yaml": "^3.10.0",
-    "markdown-it": "^8.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
+    "gulp-useref": "^3.1.5",
+    "js-yaml": "^3.12.0",
+    "markdown-it": "^8.4.2",
     "material-design-lite": "^1.3.0",
-    "nunjucks": "^3.0.1",
+    "md5": "^2.2.1",
+    "nunjucks": "^3.1.3",
     "sass-module-importer": "^1.4.0",
-    "workbox-build": "^2.1.2"
-  },
-  "dependencies": {
-    "ajv": "^5.5.2"
+    "webpack": "^4.20.2",
+    "webpack-stream": "^5.1.1",
+    "whatwg-fetch": "^3.0.0",
+    "workbox-build": "^3.6.1"
   }
 }
