--- a/.eslintrc
+++ b/.eslintrc
@@ -1,26 +1,24 @@
 {
-  "extends": [
-    "google",
-    "eslint:recommended"
-  ],
+  "parser": "babel-eslint",
   "env": {
     "es6": true,
     "node": true,
     "browser": true
   },
   "parserOptions": {
-    "ecmaVersion": 2015,
     "sourceType": "module"
   },
-  "globals": {
-    "$": true,
-    "nunjucks": true
-  },
+  "extends": [
+    "eslint:recommended",
+    "google"
+  ],
   "rules": {
     "arrow-parens": "off",
     "comma-dangle": "off",
     "no-console": "off",
     "spaced-comment": "off",
+    "padded-blocks": "off",
+    "eol-last": "off",
     "object-curly-spacing": "off",
     "indent": [
       "off",
@@ -34,6 +32,7 @@
         "ignoreUrls": true
       }
     ],
-    "semi": "error"
+    "semi": "error",
+    "require-jsdoc": "off"
   }
 }
